--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                         <div class="content">    
                                                
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank">KickStarter - Velocity</a></h3>
-                                <p class="summary">A popular Bootstrap 4 theme for promoting startup products</p>
+                                <h3 class="title"><a href="http://www.cool-stuff.cool" target="_blank">Spring Blog</a></h3>
+                                <p class="summary">Blog built using Spring and Thymeleaf. Allows users to register accounts, make, edit and delete posts and upload and view imagaes. Also featurse user authentication, page securing and other technologies.</p>
                                 <div class="featured-image has-ribbon">
                                     <a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank">
                                     <img class="img-fluid project-image" src="assets/images/projects/project-featured.png" alt="project name" />
