Fixed small things

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 
                 <aside class="list music aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Favourite coding music</h2>
+                        <h2 class="heading">Favorite coding music</h2>
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fas fa-headphones"></i> <a href="https://open.spotify.com/playlist/5UZWFJsmCMtNL2uWmQU0wb">Good Stuff Playlist</a></li>
