Fixed link, movielister is wokring on Glitch

--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
                             </div><!--//item-->
                             
                              <div class="item row">
-                                <a class="col-md-4 col-12" href="https://github.com/MovieProjectCodeup" target="_blank">
+                                <a class="col-md-4 col-12" href="https://glitch.com/~rglazer003-movies-application-4" target="_blank">
                                 <img class="img-fluid project-image" src="assets/images/projects/project-3.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://github.com/MovieProjectCodeup" target="_blank">Movie Lister</a></h3>
-                                    <p class="mb-2">Movie lister written with Javascript. Makes post and fetch requests to a JSON database to allowing users to view, add, edit and delete movies.</p>
-                                    <p><a class="more-link" href="https://github.com/MovieProjectCodeup" target="_blank"><i class="fas fa-external-link-alt"></i>Check it out on Github!</a></p>
+                                    <h3 class="title"><a href="https://glitch.com/~rglazer003-movies-application-4" target="_blank">Movie Lister</a></h3>
+                                    <p class="mb-2">Movie lister written with Javascript. Makes post and fetch requests to a JSON database to allowing users to view, add, edit and delete movies. Makes extensive use of ajax and jQuery.</p>
+                                    <p><a class="more-link" href="https://glitch.com/~rglazer003-movies-application-4" target="_blank"><i class="fas fa-external-link-alt"></i>Check it out on Glitch!</a></p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
                             
