--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <footer class="footer">
         <div class="container text-center">
                 <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out our commercial license options via our website: themes.3rdwavemedia.com */-->
-                <small class="copyright">Designed by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+                <small class="copyright">Template by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
         </div><!--//container-->
     </footer><!--//footer-->
  
