--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div>
-        <embed src="assets/pdfs/Ryan Glazer Resume.pdf" width="100%" height="1200px"/>
+        <embed src="assets/pdfs/Ryan-Glazer-Resume.pdf" width="100%" height="1200px"/>
     </div>
 </body>
 </html>
